# composix

./: README.md  composix.nix  flake.nix  lib.nix
composix/: pyproject.toml
composix/src/composix/: __main__.py  images.py  podman.py  util.py
templates/hello/: flake.nix
templates/hello-flake-parts/: flake.nix
