[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "composix"
version = "0.1.0"
description = "A podman-compose wrapper for loading OCI-images built with Nix"
readme = "../README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.8"

authors = [
  { name = "fredholm" }
]

classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
]

dependencies = []

[project.scripts]
composix = "composix.__main__:main"
